--- a/ex027/flex014 - conteudo flex/index.html
+++ b/ex027/flex014 - conteudo flex/index.html
@@ -14,10 +14,11 @@
     <main>
         <section class="flex-content">
             <article class="media-text">
-                <div class="text"></div>
+                <div class="text">
                 <h2>Elemento Media->Text</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis repellendus itaque, sit, quos ipsa impedit debitis dignissimos possimus alias consectetur error? Quibusdam laborum nulla consequatur provident nobis assumenda deserunt porro?
                 Harum, sit fugit in adipisci beatae nostrum ad iusto sapiente incidunt eveniet eos tempore possimus, soluta provident illum mollitia laboriosam et accusantium alias modi culpa? Rerum esse cum alias corporis.</p>
+                </div>
                 <div class="media">
                     <img src="400-400.jpg" alt="Imagem de 400x400 - Montanha nevada">
                 </div>
@@ -29,7 +30,7 @@
                     <P>Minima quibusdam harum magni dignissimos ipsam ratione impedit accusantium iusto officia ducimus, error, suscipit eos quam possimus quaerat adipisci maiores laboriosam. Illo odit distinctio accusamus laboriosam laudantium vitae id. Soluta.</P>
                 </div>
                 <div class="media">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Hf-bw4q6Pew?si=B8gkfbbUyhVAYY5Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="90%" height="90%" src="https://www.youtube.com/embed/Hf-bw4q6Pew?si=B8gkfbbUyhVAYY5Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </article>
 
