--- a/Capítulo 29/projeto-portfolio/index.html
+++ b/Capítulo 29/projeto-portfolio/index.html
@@ -21,7 +21,24 @@
         </nav>
     </header>
     <main>
-        <h1>Em breve...</h1>
+        <section id="ficha">
+            <img src="" alt="" class="foto">
+            <h1>Gustavo Guanabara</h1>
+            <p>
+                Formado em Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum provident repellat voluptatum aperiam assumenda facilis esse optio aliquam? Nihil fugiat, veniam aut est quibusdam cum necessitatibus neque. Cum, quo eos.
+                Atualmente, Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et est enim sequi doloribus commodi, aperiam ab animi consectetur autem tempora? Temporibus alias unde ipsum, eveniet minus repellat nemo. Alias, similique.
+            </p>
+            <div id="social">
+                <a href="#" target="_blank" rel="nofollow" style="color: #0a66c2;"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#" target="_blank" rel="nofollow" style="color: black;"><i class="fa-brands fa-github"></i></a>
+                <a href="#" target="_blank" rel="nofollow" style="color: #ff0033;"><i class="fa-brands fa-youtube"></i></a>
+                <a href="#" target="_blank" rel="nofollow" style="color: #c13584"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#" target="_blank" rel="nofollow" style="color: #006eff"><i class="fa-solid fa-globe"></i></a>
+            </div>
+        </section>
+        <section id="detalhes">
+
+        </section>
     </main>
     <footer>
 
