--- a/Capítulo 29/projeto-portfolio/index.html
+++ b/Capítulo 29/projeto-portfolio/index.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <section id="ficha">
-            <img src="" alt="" class="foto">
+            <img src="imagens/guanabara-perfil.jpg" alt="Gustavo Guanabara" class="foto">
             <h1>Gustavo Guanabara</h1>
             <p>
                 Formado em Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum provident repellat voluptatum aperiam assumenda facilis esse optio aliquam? Nihil fugiat, veniam aut est quibusdam cum necessitatibus neque. Cum, quo eos.
