--- a/Capítulo 29/projeto-portfolio/index.html
+++ b/Capítulo 29/projeto-portfolio/index.html
@@ -38,14 +38,176 @@
         </section>
         <section id="detalhes">
             <article id="video">
-                <h2><i class="fa-solid fa-handshake"></i> Deixe eu me apresentar</h2>
+                <h2><i class="fa-solid fa-handshake"></i> Apresentação e boas-vindas</h2>
                 <div class="video-container">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/tH2w6Oxx0kQ?si=pPQQDfS6oHyb7l4K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
                 </article>
             <article id="skills">
                 <h2><i class="fa-solid fa-brain"></i> Minhas habilidades</h2> <!-- Ele usou a palavra skills -->
+                <div id="skill-container">
 
+                    <!-- Hard Skill 1 -->
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-code"></i>
+                                HTML5
+                            </span>
+                            <span class="porcent">
+                                90%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 90%;">
+                            </div>
+                        </div>
+                    </div>
+                    <!--  Hard Skill 2 -->
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-code"></i>
+                                CSS3
+                            </span>
+                            <span class="porcent">
+                                80%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 80%;">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Hard Skill 3 -->
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-code"></i>
+                                JavaScript
+                            </span>
+                            <span class="porcent">
+                                15%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 15%;">
+                            </div>
+                        </div>
+                    </div>
+                     <!-- Hard Skill 4 -->
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-code"></i>
+                                Java
+                            </span>
+                            <span class="porcent">
+                                40%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 40%;">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Hard Skill 5 -->
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-code"></i>
+                                Python
+                            </span>
+                            <span class="porcent">
+                                20%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 20%;">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Soft Skill 1 -->
+                     <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-person-walking"></i>
+                                Proatividade
+                            </span>
+                            <span class="porcent">
+                                95%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 95%;">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Soft Skill 2 -->
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-people-group"></i>
+                                Trabalho em Equipe
+                            </span>
+                            <span class="porcent">
+                                80%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 80%;">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Soft Skill 3 -->
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-regular fa-comments"></i>
+                                Comunicação
+                            </span>
+                            <span class="porcent">
+                                85%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 85%;">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Soft Skill 4 -->
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-arrows-turn-to-dots"></i>
+                                Adaptabilidade
+                            </span>
+                            <span class="porcent">
+                                90%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 90%;">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Soft Skill 4 -->
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-regular fa-flag"></i>
+                                Liderança
+                            </span>
+                            <span class="porcent">
+                                90%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 90%;">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </article>
 
             <article id="formacao">
