--- a/Capítulo 29/projeto-portfolio/index.html
+++ b/Capítulo 29/projeto-portfolio/index.html
@@ -33,7 +33,7 @@
                 <a href="#" target="_blank" rel="nofollow" style="color: black;"><i class="fa-brands fa-github"></i></a>
                 <a href="#" target="_blank" rel="nofollow" style="color: #ff0033;"><i class="fa-brands fa-youtube"></i></a>
                 <a href="#" target="_blank" rel="nofollow" style="color: #c13584"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#" target="_blank" rel="nofollow" style="color: #006eff"><i class="fa-solid fa-globe"></i></a>
+                <a href="#" target="_blank" rel="nofollow" style="color: #2884fd"><i class="fa-solid fa-globe"></i></a>
             </div>
         </section>
         <section id="detalhes">
@@ -212,6 +212,26 @@
 
             <article id="formacao">
                 <h2><i class="fa-solid fa-graduation-cap"></i> Formação</h2>
+                <div id="formacao-container">
+                    <!-- Curso 1 -->
+                    <div class="curso">
+                        <h3 class="titulacao" style="display: inline;">Direito</h3>
+                        <p class="conclusao" style="display: inline;">(2018)</p>
+                        <p class="instituicao">Universidade Federal de Santa Cataria - UFSC</p>
+                    </div>
+                    <!-- Curso 2 -->
+                    <div class="curso">
+                        <h3 class="titulacao" style="display: inline;">Administração (Gestão Pública) - Pós-graduação</h3>
+                        <p class="conclusao" style="display: inline;">(2020)</p>
+                        <p class="instituicao">Faculdade Educacional da Lapa - FAEL</p>
+                    </div>
+                    <!-- Curso 3 -->
+                    <div class="curso">
+                        <h3 class="titulacao" style="display: inline;">Sistemas de Informação</h3>
+                        <p class="conclusao" style="display: inline;">(Dez/2026)</p>
+                        <p class="instituicao">Escola Superior de Criciúma - ESUCRI</p>
+                    </div>
+                </div>
             </article>
 
             <article id="projetos">
