--- a/Capítulo 29/projeto-portfolio/index.html
+++ b/Capítulo 29/projeto-portfolio/index.html
@@ -236,11 +236,56 @@
 
             <article id="projetos">
                 <h2><i class="fa-solid fa-laptop-code"></i> Projetos</h2>
+                <!-- Projeto 1 -->
+                <div id="projeto-container">
+                    <div class="projeto">
+                        <img src="imagens/projeto-01-videos.jpg" alt="Projeto 1" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2025</p>
+                            <h3 class="titulo">Projeto de Vídeos</h3>
+                            <p>Projeto construído para treinar a inserção de vídeos em nosso site</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi aperiam ipsam voluptas sunt dolorem optio, beatae aliquid esse magni corrupti? Voluptates, adipisci? Ducimus doloribus sunt minima ipsum dolorem. Alias, repudiandae.</p>
+                            </details>
+                        </div>
+                    </div>
+
+                <!-- Projeto 2 -->
+                    <div class="projeto">
+                        <img src="imagens/projeto-02-cordel.jpg" alt="Projeto 1" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2025</p>
+                            <h3 class="titulo">Projeto Cordel</h3>
+                            <p>Projeto construído para treinar efeito paralax em imagens</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi aperiam ipsam voluptas sunt dolorem optio, beatae aliquid esse magni corrupti? Voluptates, adipisci? Ducimus doloribus sunt minima ipsum dolorem. Alias, repudiandae.</p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <!-- Projeto 2 -->
+                    <div class="projeto">
+                        <img src="imagens/projeto-03-android.jpg" alt="Projeto 1" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2025</p>
+                            <h3 class="titulo">Projeto Android</h3>
+                            <p>Projeto construído para treinar conteúdos e imagens dinâmicas</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi aperiam ipsam voluptas sunt dolorem optio, beatae aliquid esse magni corrupti? Voluptates, adipisci? Ducimus doloribus sunt minima ipsum dolorem. Alias, repudiandae.</p>
+                            </details>
+                        </div>
+                    </div>
+
+
+                </div>
             </article>
         </section>
     </main>
     <footer>
-
+        Portfólio desenvolvido por <a href="#" target="_blank">Gustavo Ghislandi</a> em 2025.
     </footer>
     <script src="scripts/"></script>
 </body>
