--- a/Capítulo 29/projeto-portfolio/index.html
+++ b/Capítulo 29/projeto-portfolio/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="favicon.svg" type="image/svg">
     <script src="https://kit.fontawesome.com/92e8747a9f.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body> <!-- Se colocar class ="escuro", iniciará no modo escuro-->
     <header>
         <nav id="menu">
             <ul>
@@ -16,7 +16,7 @@
                 <li><a href="#skills" class="link"><i class="fa-solid fa-brain"></i></a></li>
                 <li><a href="#formacao" class="link"><i class="fa-solid fa-graduation-cap"></i></a></li>
                 <li><a href="#projetos" class="link"><i class="fa-solid fa-laptop-code"></i></a></li>
-                <li><a href="#" id="botao-tema"><i class="fa-solid fa-moon"></i></a></li>
+                <li><a href="#" class="link" id="botao-tema"><i class="fa-solid fa-moon"></i></a></li>
             </ul>
         </nav>
     </header>
